# bimmuda-factor-analysis

./: .gitignore  README.md  pyproject.toml
docs/: index.html  scree.html
scripts/: factor_billboard.R  style_factor_scores.R
src/bimmuda_feature_analysis/: __init__.py  __main__.py  billboard_dataset.py  billboard_download.py  billboard_wiki.py  catalog.py  cluster.py  efa.py  efa_interpretations.py  efa_plots.py  efa_trends.py  loader.py  metadata.py  preprocess.py  schema.py  style_factors.py
tests/: test_billboard_download.py  test_billboard_wiki.py  test_cluster.py  test_efa_plots.py  test_efa_trends.py  test_era_cluster.py  test_loader.py  test_metadata.py  test_preprocess.py
